--- a/dataflow/Dockerfile
+++ b/dataflow/Dockerfile
@@ -1,5 +1,5 @@
-# hadolint global ignore=DL3008,DL3013,DL3015
-FROM gcr.io/dataflow-templates-base/python311-template-launcher-base:2.61.0
+# hadolint global ignore=DL3008,DL3013,DL3015,DL3006
+FROM gcr.io/dataflow-templates-base/python311-template-launcher-base
 
 ENV FLEX_TEMPLATE_PYTHON_REQUIREMENTS_FILE="/template/requirements.txt"
 ENV FLEX_TEMPLATE_PYTHON_PY_FILE="/template/pipeline.py"
