--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ google-cloud-dataflow-client = "^0.8.14"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
 flake8-pyproject = "^1.2.3"
+diagrams = "^0.24.1"
 
 [tool.poetry.group.dataflow.dependencies]
 apache-beam = {extras = ["gcp"], version = "^2.61.0"}
